--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,17 +37,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.20.1
-  firebase_auth: ^3.6.3
+  firebase_core: ^2.4.1
+  firebase_auth: ^4.2.5
   cloud_firestore:
   flutter_svg: ^1.1.3
   responsive_ui: ^3.0.0
   smooth_page_indicator: ^1.0.0
-  lottie: ^1.4.1
+  lottie: ^2.2.0
   google_sign_in: ^5.4.1
   flutter_easyloading:
-  connectivity_plus: ^2.3.6+1
-  internet_connection_checker: ^0.0.1+4
+  connectivity_plus: ^3.0.2
+  internet_connection_checker: ^1.0.0+1
   
 
 dev_dependencies:
